<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/workplans_activity"
    android:background="@color/colorVeryLightGray"
    tools:context="asplundh.sps.com.crewapp.Activity.WorkPlansActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productivity_app"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            />

        <RelativeLayout
            android:id="@+id/btn_menu"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            >
            <ImageView
                android:layout_width="22dp"
                android:layout_height="25dp"
                android:background="@drawable/menu_ic"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_below="@+id/top_bar"
        android:id="@+id/lay_Search_bar"
        >

        <EditText
            android:id="@+id/et_workplans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_work_plan"
            android:padding="13dp"
            android:cursorVisible="false"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_search"
            android:background="@drawable/bg_tv_search"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_Search_bar"
        />


        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:visibility="gone"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>

            <RelativeLayout
                android:id="@+id/lay_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    />

            </RelativeLayout>

        </LinearLayout>

</RelativeLayout>
