<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/activity_login"
    tools:context="asplundh.sps.com.asplundhproductivity.Activity.LoginActivity">

    //Top Logo
    <ImageView
        android:id="@+id/logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/icon"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/utility"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/utilitiesservice"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/logo"
        />


    //Login fields

    <LinearLayout
        android:id="@+id/login_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/utility"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        >

        //EMP ID
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/iv_username"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/login_fields_ic"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="28dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/profile" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/employee_id"
                android:imeOptions="actionNext"
                android:paddingLeft="12dp"
                android:text="mark"
                android:maxLength="10"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/blue_dark"
                android:textColorHint="@color/blue_dark"
                android:textSize="19dp"
                android:layout_toEndOf="@+id/iv_username" />

        </RelativeLayout>

        //PIN
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/iv_pin"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/login_fields_ic"
                >
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/locked" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:background="@null"
                android:hint="@string/pin"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:maxLength="4"
                android:text="mark"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/blue_dark"
                android:textColorHint="@color/blue_dark"
                android:textSize="19dp"
                android:layout_toEndOf="@+id/iv_pin" />

            <ImageView
                android:id="@+id/toggle_password_visibility"
                android:layout_width="38dp"
                android:layout_height="40dp"
                android:padding="3dp"
                android:src="@drawable/toggle_visibility"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                />

        </RelativeLayout>

        //Login Button

        <RelativeLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/blue_btn"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="@string/login"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                />
        </RelativeLayout>

    </LinearLayout>


    //OR LINE

    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginTop="38dp"
        android:orientation="horizontal"
        android:layout_below="@+id/login_fields"
        android:weightSum="3">



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.3"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.3"
            android:background="@color/white"></RelativeLayout>

    </LinearLayout>


    //SCAN EMPLOYEE BADGE

    <RelativeLayout
        android:id="@+id/scan_barcode"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/grey"
        android:layout_alignParentBottom="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_btn"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/qrcode_ic"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_my_employee_badge"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="22sp"
                    />
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
